# hs-safescope

./: .gitignore  CHANGELOG.md  README.md  cabal.project  hs-safescope.cabal
app/: Main.hs  Options.hs
examples/example/: CHANGELOG.md  README.md  bar.c  bar.h  cabal.project  example.cabal
examples/example/app/: Main.hs
src/HsSpeedscope/: FFI.hs
src/HsSpeedscope/FFI/: Types.hs
