cabal-version:      2.4
name:               hs-safescope
version:            0.1.0.0

author:             Javier Sagredo
maintainer:         jasataco@gmail.com

extra-source-files: CHANGELOG.md

library
    exposed-modules:  HsSpeedscope.FFI
                      HsSpeedscope.FFI.Types

    build-depends:    aeson
                    , base >=4.14 && < 5
                    , containers
                    , extra
                    , ghc-events
                    , hs-speedscope
                    , mtl
                    , text
                    , vector
    hs-source-dirs:   src
    default-language: Haskell2010

executable hs-safescope
    main-is:          Main.hs
    other-modules:    Options

    build-depends:    aeson
                    , base >=4.14 && < 5
                    , ghc-events
                    , hs-safescope
                    , optparse-applicative

    hs-source-dirs:   app
    default-language: Haskell2010
